add cran comments md and fix some documents

--- a/README.Rmd
+++ b/README.Rmd
@@ -23,7 +23,7 @@ options(digits = 3)
 <!-- badges: start -->
 [![Lifecycle: experimental](https://img.shields.io/badge/lifecycle-experimental-orange.svg)](https://lifecycle.r-lib.org/articles/stages.html#experimental)
 [![R-CMD-check](https://github.com/ygeunkim/bvhar/workflows/R-CMD-check/badge.svg)](https://github.com/ygeunkim/bvhar/actions)
-[![Codecov test coverage](https://codecov.io/gh/ygeunkim/bvhar/branch/master/graph/badge.svg?token=umidjitjiK)](https://codecov.io/gh/ygeunkim/bvhar?branch=master)
+[![Codecov test coverage](https://codecov.io/gh/ygeunkim/bvhar/graph/badge.svg)](https://codecov.io/gh/ygeunkim/bvhar)
 <!-- badges: end -->
 
 ## Overview
@@ -55,15 +55,13 @@ library(dplyr)
 
 Repeatedly, `bvhar` is a research tool to analyze multivariate time series model above
 
-| Model | function | S3 |  
+| Model | function | class |  
 |:-----:|:--------:|:--:|  
 | VAR | `var_lm()` | `varlse` |  
 | VHAR | `vhar_lm()` | `vharlse` |  
 | BVAR | `bvar_minnesota()` | `bvarmn` |  
-| BVAR | `bvar_flat()` | `bvarflat` |  
 | BVHAR | `bvhar_minnesota()` | `bvharmn` |  
 
-As the other analyzer tools uses S3 such as `lm`, this package use methods `coef`, `predict`, etc.
 This readme document shows forecasting procedure briefly.
 Details about each function are in vignettes and help documents.
 
@@ -172,9 +170,7 @@ forecast_bvhar_v2 <- predict(mod_bvhar_v2, h)
 (msebvhar_v2 <- mse(forecast_bvhar_v2, etf_te))
 ```
 
-## Compare Models
-
-### Layers
+## Plots
 
 ```{r predfig}
 autoplot(forecast_var, x_cut = 870, ci_alpha = .7, type = "wrap") +
@@ -182,20 +178,6 @@ autoplot(forecast_var, x_cut = 870, ci_alpha = .7, type = "wrap") +
   autolayer(forecast_bvar, ci_alpha = .4) +
   autolayer(forecast_bvhar_v1, ci_alpha = .2) +
   autolayer(forecast_bvhar_v2, ci_alpha = .1)
-```
-
-### Erros
-
-```{r msefig}
-list(
-  forecast_var,
-  forecast_vhar,
-  forecast_bvar,
-  forecast_bvhar_v2
-) %>% 
-  gg_loss(y = etf_te, mean_line = TRUE, mean_param = list(alpha = .5)) +
-  ggplot2::theme_minimal() +
-  ggplot2::theme(axis.text.x = ggplot2::element_text(angle = -45, vjust = -1))
 ```
 
 
