--- a/vignettes/forecasting.Rmd
+++ b/vignettes/forecasting.Rmd
@@ -34,6 +34,7 @@ knitr::opts_chunk$set(
   fig.width = 6,
   fig.asp = .618
 )
+orig_opts <- options("digits")
 options(digits = 3)
 set.seed(1)
 ```
@@ -387,3 +388,6 @@ list(
   unlist()
 ```
 
+```{r resetopts, include=FALSE}
+options(orig_opts)
+```
