--- a/README.Rmd
+++ b/README.Rmd
@@ -21,9 +21,9 @@ options(digits = 3)
 # bvhar <img src='man/figures/logo.png' align="right" height="139" />
 
 <!-- badges: start -->
-[![Lifecycle: experimental](https://img.shields.io/badge/lifecycle-experimental-orange.svg)](https://lifecycle.r-lib.org/articles/stages.html#experimental)
 [![R-CMD-check](https://github.com/ygeunkim/bvhar/workflows/R-CMD-check/badge.svg)](https://github.com/ygeunkim/bvhar/actions)
 [![Codecov test coverage](https://codecov.io/gh/ygeunkim/bvhar/graph/badge.svg)](https://app.codecov.io/gh/ygeunkim/bvhar)
+[![JSCS-DOI](https://img.shields.io/badge/JSCS-10.1080/00949655.2023.2281644-blue.svg)](https://ygeunkim.github.io/publication/bvhar/)
 <!-- badges: end -->
 
 ## Overview
