--- a/README.Rmd
+++ b/README.Rmd
@@ -21,9 +21,9 @@ options(digits = 3)
 # bvhar <img src='man/figures/logo.png' align="right" height="139" />
 
 <!-- badges: start -->
+[![CRAN status](https://www.r-pkg.org/badges/version/bvhar)](https://CRAN.R-project.org/package=bvhar)
 [![R-CMD-check](https://github.com/ygeunkim/bvhar/workflows/R-CMD-check/badge.svg)](https://github.com/ygeunkim/bvhar/actions)
 [![Codecov test coverage](https://codecov.io/gh/ygeunkim/bvhar/graph/badge.svg)](https://app.codecov.io/gh/ygeunkim/bvhar)
-[![JSCS-DOI](https://img.shields.io/badge/JSCS-10.1080/00949655.2023.2281644-blue.svg)](https://ygeunkim.github.io/publication/bvhar/)
 <!-- badges: end -->
 
 ## Overview
@@ -39,11 +39,17 @@ Basically, the package focuses on the research with forecasting.
 
 ## Installation
 
-You can only install the development version at this point.
+```{r craninst, eval=FALSE}
+install.packages("bvhar")
+```
 
-```{r, eval=FALSE}
-# install.packages("remotes")
-remotes::install_github("ygeunkim/bvhar")
+### Development version
+
+You can install the development version from this repository.
+
+```{r devinst, eval=FALSE}
+# install.packages("pak")
+pak::pak("ygeunkim/bvhar")
 ```
 
 ## Models
