build readme and add 1.2.0 section for pkgdown

--- a/README.Rmd
+++ b/README.Rmd
@@ -50,8 +50,8 @@ install.packages("bvhar")
 You can install the development version from this repository.
 
 ```{r devinst, eval=FALSE}
-# install.packages("pak")
-pak::pak("ygeunkim/bvhar")
+# install.packages("remotes")
+remotes::install_github("ygeunkim/bvhar")
 ```
 
 ## Models
