--- a/vignettes/shrinkage.Rmd
+++ b/vignettes/shrinkage.Rmd
@@ -94,7 +94,7 @@ autoplot(fit_hs, type = "dens", regex_pars = "tau")
 ## SSVS
 
 ```{r svssvs}
-(fit_ssvs_sv <- bvhar_sv(etf_train, num_iter = 500, bayes_spec = set_ssvs(), include_mean = FALSE, minnesota = "longrun"))
+(fit_ssvs_sv <- bvhar_sv(etf_train, num_iter = 500, bayes_spec = set_sv(prior_spec = set_ssvs()), init_spec = init_sv(init_coef = init_ssvs()), include_mean = FALSE, minnesota = "longrun"))
 ```
 
 ```{r heatssvssv}
@@ -104,7 +104,7 @@ autoplot(fit_ssvs_sv)
 ## Horseshoe
 
 ```{r}
-(fit_hs_sv <- bvhar_sv(etf_train, num_iter = 500, bayes_spec = set_horseshoe(), include_mean = FALSE, minnesota = "longrun"))
+(fit_hs_sv <- bvhar_sv(etf_train, num_iter = 500, bayes_spec = set_sv(prior_spec = set_horseshoe()), init_spec = init_sv(init_coef = init_horseshoe()), include_mean = FALSE, minnesota = "longrun"))
 ```
 
 ```{r heathssv}
