--- a/README.Rmd
+++ b/README.Rmd
@@ -73,10 +73,10 @@ Repeatedly, `bvhar` is a research tool to analyze multivariate time series model
 |:-----:|:--------:|:-----:|  
 | VAR | `var_lm()` | |  
 | VHAR | `vhar_lm()` | |  
-| BVAR | `bvar_minnesota()` | Minnesota |  
-| BVHAR | `bvhar_minnesota()` | Minnesota |  
-| BVAR-SV | `bvar_sv()` | SSVS, Horseshoe |  
-| BVHAR-SV | `bvhar_sv()` | SSVS, Horseshoe |  
+| BVAR | `bvar_minnesota()` | Minnesota (will move to `var_bayes()`) |  
+| BVHAR | `bvhar_minnesota()` | Minnesota (will move to `vhar_bayes()`) |  
+| BVAR | `var_bayes()` | SSVS, Horseshoe, Minnesota, NG, DL |  
+| BVHAR | `vhar_bayes()` | SSVS, Horseshoe, Minnesota, NG, DL |  
 
 This readme document shows forecasting procedure briefly.
 Details about each function are in vignettes and help documents.
