--- a/python/docs/index.qmd
+++ b/python/docs/index.qmd
@@ -1,5 +1,29 @@
----
-jupyter: python3
----
+# bvhar
+<a href="https://github.com/ygeunkim/bvhar/tree/feature/python/python/"><img src="logo.png" align="right" height="138" /></a>
 
-# bvhar <img src='../../man/figures/logo.png' align="right" height="139" />
+<!-- badges: start -->
+<!-- badges: end -->
+
+## Overview
+
+`bvhar` provides functions to analyze multivariate time series time series using
+
+- VAR
+- VHAR (Vector HAR)
+- BVAR (Bayesian VAR)
+- **BVHAR (Bayesian VHAR)**
+
+Basically, the package focuses on the research with forecasting.
+
+## Installation
+
+In `python` directory:
+
+```bash
+pip install -e .
+```
+
+## Usage
+
+
+
