not use editable mode in ci

--- a/python/README.qmd
+++ b/python/README.qmd
@@ -3,19 +3,23 @@ format: gfm
 keep-ipynb: false
 ---
 
-<!-- badges: start -->
-<!-- badges: end -->
+<!-- README.md is generated from README.qmd. Please edit that file -->
 
-# bvhar <img src='../man/figures/logo.png' align="right" height="139" />
+# bvhar <img src="docs/logo.png" align="right" height="138" />
+
+<!-- badges: start -->
+[![Experimental](https://img.shields.io/badge/lifecycle-experimental-orange.svg)](https://lifecycle.r-lib.org/articles/stages.html#experimental)
+[![py-conda-check](https://github.com/ygeunkim/bvhar/actions/workflows/py-conda-check.yaml/badge.svg?branch=feature/python)](https://github.com/ygeunkim/bvhar/actions/workflows/py-conda-check.yaml?query=branch%3Afeature/python)
+<!-- badges: end -->
 
 Started to develop `bvhar` in Python!
 
 ## Installation
 
-In `python` directory:
+In this `python` directory:
 
 ```bash
-pip install -e .
+pip install .
 ```
 
 Check OpenMP:
