add pip git install ci

--- a/python/docs/index.qmd
+++ b/python/docs/index.qmd
@@ -1,9 +1,13 @@
 # bvhar <a href="https://github.com/ygeunkim/bvhar/tree/feature/python/python/"><img src="logo.png" align="right" height="138" /></a>
 
-This is a python version for [`bvhar`](https://cloud.r-project.org/web/packages/bvhar/index.html) package.
+This is a Python version for [`bvhar`](https://cloud.r-project.org/web/packages/bvhar/index.html) package.
 
 The package implements C++ headers made in R package.
 Learn more about [`bvhar for R`](https://ygeunkim.github.io/package/bvhar/index.html).
+
+::: {.callout-note}
+`bvhar` for Python is not ready to use. This page is rendered just for testing; yet.
+:::
 
 ## Eigen and boost setting
 
@@ -40,5 +44,6 @@ pip install -e .
 
 ## Usage
 
-`bvhar` for python is not ready to use.
+You can see the development status in PR [#10](https://github.com/ygeunkim/bvhar/pull/10).
+
 
