--- a/python/docs/intro.qmd
+++ b/python/docs/intro.qmd
@@ -22,7 +22,16 @@ etf_vix
 
 # Models
 
+```{python}
+from bvhar.model import VarOls, VharOls
+```
+
 ## VAR
+
+```{python}
+fit_var = VarOls(etf_vix, 1, True)
+fit_var.fit()
+```
 
 ## VHAR
 
