--- a/python/docs/get_started.qmd
+++ b/python/docs/get_started.qmd
@@ -23,8 +23,8 @@ brew update
 brew install boost eigen
 EIGEN_LOC=$(brew --prefix eigen)
 BOOST_LOC=$(brew --prefix boost)
-echo "EIGEN_INCLUDE_DIR=$(brew --prefix eigen)/include/eigen3" >> ~/.zshrc
-echo "BOOST_INCLUDE_DIR=$(brew --prefix boost)/include" >> ~/.zshrc
+echo 'export EIGEN_INCLUDE_DIR=$(brew --prefix eigen)/include/eigen3' >> ~/.zshrc
+echo 'export BOOST_INCLUDE_DIR=$(brew --prefix boost)/include' >> ~/.zshrc
 source ~/.zshrc
 ```
 
