use temp directory in git install

--- a/python/README.qmd
+++ b/python/README.qmd
@@ -26,6 +26,12 @@ This is `bvhar` package for python. We aims to add every feature in R package.
 
 ## Installation
 
+From GitHub (`feature/python` branch at this stage):
+
+```bash
+python -m pip install 'git+https://github.com/ygeunkim/bvhar.git@feature/python#egg=bvhar&subdirectory=python'
+```
+
 ### Eigen and boost usage
 
 `bvhar` uses Eigen and boost headers in C++ sources.
@@ -41,13 +47,3 @@ Otherwise, you should set their paths by yourself; at this stage.
 - `EIGEN_INCLUDE_DIR`: Eigen path that includes the eigen headers
 - `BOOST_INCLUDE_DIR`: boost path that includes the boost headers
 
-### Developement version
-
-In this `python` directory:
-
-```bash
-git clone -b feature/python https://github.com/ygeunkim/bvhar.git
-cd python
-# use conda script abvoe if you use conda
-pip install -e .
-```
