--- a/python/docs/get_started.qmd
+++ b/python/docs/get_started.qmd
@@ -96,8 +96,8 @@ Here is an example with LLVM.
 ```zsh
 brew update
 brew install llvm libomp
-echo "CC=$(brew --prefix llvm)/bin/clang" >> ~/.zshrc
-echo "CXX=$(brew --prefix llvm)/bin/clang++" >> ~/.zshrc
-echo "CPPFLAGS=-I$(brew --prefix llvm)/include -I$(brew --prefix libomp)/include" >> ~/.zshrc
-echo "LDFLAGS=-L$(brew --prefix llvm)/lib -L$(brew --prefix libomp)/lib" >> ~/.zshrc
+echo "export CC=$(brew --prefix llvm)/bin/clang" >> ~/.zshrc
+echo "export CXX=$(brew --prefix llvm)/bin/clang++" >> ~/.zshrc
+echo "export CPPFLAGS=-I$(brew --prefix llvm)/include -I$(brew --prefix libomp)/include" >> ~/.zshrc
+echo "export LDFLAGS=-L$(brew --prefix llvm)/lib -L$(brew --prefix libomp)/lib" >> ~/.zshrc
 ```
