--- a/vignettes/stochastic-volatility.Rmd
+++ b/vignettes/stochastic-volatility.Rmd
@@ -26,7 +26,7 @@ library(bvhar)
 ```
 
 ```{r etfdat}
-etf <- etf_vix[1:100, 1:3]
+etf <- etf_vix[1:55, 1:3]
 # Split-------------------------------
 h <- 5
 etf_eval <- divide_ts(etf, h)
@@ -45,6 +45,8 @@ By specifying `cov_spec = set_sv()`,
         - BVHAR: `set_bvhar()` and `set_weight_bvhar()`
     - SSVS prior: `set_ssvs()`
     - Horseshoe prior: `set_horseshoe()`
+    - NG prior: `set_ng()`
+    - DL prior: `set_dl()`
 - `sv_spec`: prior settings for SV, `set_sv()`
 - `intercept`: prior for constant term, `set_intercept()`
 
@@ -52,25 +54,30 @@ By specifying `cov_spec = set_sv()`,
 set_sv()
 ```
 
-```{r setinter}
-set_intercept()
-```
-
 
 ## SSVS
 
 ```{r svssvs}
-(fit_ssvs <- vhar_bayes(etf_train, num_chains = 2, num_iter = 50, bayes_spec = set_ssvs(), cov_spec = set_sv(), include_mean = FALSE, minnesota = "longrun"))
+(fit_ssvs <- vhar_bayes(etf_train, num_chains = 2, num_iter = 20, bayes_spec = set_ssvs(), cov_spec = set_sv(), include_mean = FALSE, minnesota = "longrun"))
 ```
 
-```{r heatssvssv}
-autoplot(fit_ssvs)
-```
 
 ## Horseshoe
 
-```{r}
-(fit_hs <- vhar_bayes(etf_train, num_chains = 2, num_iter = 50, bayes_spec = set_horseshoe(), cov_spec = set_sv(), include_mean = FALSE, minnesota = "longrun"))
+```{r hssv}
+(fit_hs <- vhar_bayes(etf_train, num_chains = 2, num_iter = 20, bayes_spec = set_horseshoe(), cov_spec = set_sv(), include_mean = FALSE, minnesota = "longrun"))
+```
+
+## Normal-Gamma prior
+
+```{r ngsv}
+(fit_ng <- vhar_bayes(etf_train, num_chains = 2, num_iter = 20, bayes_spec = set_ng(), cov_spec = set_sv(), include_mean = FALSE, minnesota = "longrun"))
+```
+
+## Dirichlet-Laplace prior
+
+```{r dlsv}
+(fit_dl <- vhar_bayes(etf_train, num_chains = 2, num_iter = 20, bayes_spec = set_dl(), cov_spec = set_sv(), include_mean = FALSE, minnesota = "longrun"))
 ```
 
 ## Bayesian visualization
