--- a/README.Rmd
+++ b/README.Rmd
@@ -30,7 +30,7 @@ options(digits = 3)
 
 ## Overview
 
-`bvhar` provides functions to analyze multivariate time series time series using
+`bvhar` provides functions to analyze and forecast multivariate time series using
 
 - VAR
 - VHAR (Vector HAR)
