require r 4.1 following tidyverse schedule

--- a/vignettes/bvhar.Rmd
+++ b/vignettes/bvhar.Rmd
@@ -55,7 +55,7 @@ Since this is just an example, we arbitrarily extract a small number of variable
 ```{r etfdat}
 var_idx <- c("GVZCLS", "OVXCLS", "EVZCLS", "VXFXICLS")
 etf <- 
-  etf_vix %>% 
+  etf_vix |> 
   dplyr::select(dplyr::all_of(var_idx))
 etf
 ```
